# news_feeder

./: .gitignore  CLAUDE.md  GITHUB_ACTIONS_SETUP.md  README.md  feeds.yml  pyproject.toml  rss_mail.py  rss_mail.yml
.github/workflows/: rss_mail.yml
src/news_feeder/: config.py  db.py  email.py  feeds.py  main.py  translate.py
tests/: conftest.py  test_db.py  test_feeds.py  test_feeds_network.py  test_news_retrieval.py  test_translate.py
